src/objects/Survey_Question__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brady_NPS__c</fullName>
        <formula>((Brady_Positive_NPS_Count__c - Brady_Negative_NPS_Count__c)/Total_Responses__c)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brady NPS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brady_Negative_NPS_Count__c</fullName>
        <label>Brady Negative NPS Count</label>
        <summaryFilterItems>
            <field>SurveyQuestionResponse__c.NPS_Score_Field__c</field>
            <operation>equals</operation>
            <value>0,1,2,3,4</value>
        </summaryFilterItems>
        <summaryForeignKey>SurveyQuestionResponse__c.Survey_Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Brady_Positive_NPS_Count__c</fullName>
        <label>Brady Positive NPS Count</label>
        <summaryFilterItems>
            <field>SurveyQuestionResponse__c.NPS_Score_Field__c</field>
            <operation>equals</operation>
            <value>7,8,9,10</value>
        </summaryFilterItems>
        <summaryForeignKey>SurveyQuestionResponse__c.Survey_Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Choices_New__c</fullName>
        <label>Choices New</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Choices__c</fullName>
        <label>Choices</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NPS_Question__c</fullName>
        <formula>IF(
CONTAINS(Name,&apos;Based on your experience with our contact center today&apos;), &apos;Enterprise - Level (The Ultimate Question)&apos;,

IF(
CONTAINS(Name,&apos;Compared to your previous interactions with healthcare providers&apos;), &apos;Department - Level&apos;,

IF(
CONTAINS(Name,&apos;If you owned your own customer service company&apos;), &apos;Agent - Level&apos;,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Negative_NPS__c</fullName>
        <label>Negative NPS</label>
        <summaryFilterItems>
            <field>SurveyQuestionResponse__c.NPS_Score_Field__c</field>
            <operation>equals</operation>
            <value>0,1,2,3,4,5,6</value>
        </summaryFilterItems>
        <summaryForeignKey>SurveyQuestionResponse__c.Survey_Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <description>Field to specify in which position the question is in the survey.</description>
        <inlineHelpText>Enter the position of the question within the survey here.</inlineHelpText>
        <label>OrderNumber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_New__c</fullName>
        <label>Question New</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rally_NPS__c</fullName>
        <formula>((Total_NPS_Count__c - Negative_NPS__c)/Total_Responses__c)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rally NPS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the question required?</description>
        <inlineHelpText>Check this box if you want the taker to be required to take the question.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_Rating__c</fullName>
        <formula>IF(Rally_NPS__c &gt; 0.80,IMAGE(&quot;/img/samples/stars_500.gif&quot;, &quot;5 Stars&quot;),
IF(Rally_NPS__c &gt; 0.60,IMAGE(&quot;/img/samples/stars_400.gif&quot;, &quot;4 Stars&quot;),
IF(Rally_NPS__c &gt; 0.40,IMAGE(&quot;/img/samples/stars_300.gif&quot;, &quot;3 Stars&quot;),
IF(Rally_NPS__c &gt; 0.20,IMAGE(&quot;/img/samples/stars_200.gif&quot;, &quot;2 Stars&quot;),
IMAGE(&quot;/img/samples/stars_100.gif&quot;, &quot;1 Star&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Star Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>SurveyQuestions</relationshipLabel>
        <relationshipName>SurveyQuestions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_NPS_Count__c</fullName>
        <label>Positive NPS Count</label>
        <summaryFilterItems>
            <field>SurveyQuestionResponse__c.NPS_Score_Field__c</field>
            <operation>equals</operation>
            <value>9,10</value>
        </summaryFilterItems>
        <summaryForeignKey>SurveyQuestionResponse__c.Survey_Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Responses__c</fullName>
        <label>Total Responses</label>
        <summaryForeignKey>SurveyQuestionResponse__c.Survey_Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Select--Vertical</fullName>
                </value>
                <value>
                    <fullName>Single Select--Horizontal</fullName>
                </value>
                <value>
                    <fullName>Multi-Select--Vertical</fullName>
                </value>
                <value>
                    <fullName>Free Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Survey Question</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>